2010-05-04  Colin Leroy  <colin@colino.net

	* packages/packages.current: Update Claws-Mail and plugins

2010-04-21  Marcus Brinkmann  <marcus@g10code.de>

	* packages/packages.current: Update gpgme.

2010-04-21  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	* packages/packages.current, src/uninst-kleopatra.nsi,
        src/inst-kleopatra.nsi: Update kdelibs and kleopatra. 
        Restructure kleopatra nsi files to reduce diff with src/pkg-to-nsi.pl 
        script.

2010-04-21  Marcus Brinkmann  <marcus@g10code.de>

	* packages/packages.current: Update gpa, gpgol, gpgex, libassuan,
	gnupg, dirmngr, gpgme and scute.	
	* src/Makefile.am (gpg4win_pkg_libassuan_configure): Instead of
	disable-shared, use enable-static.  Also, don't set pth path.
	* src/inst-libassuan.nsi: Install libassuan-0.dll.
	* src/uninst-libassuan.nsi: Uninstall it.	

2010-04-16  Werner Koch  <wk@g10code.com>

	* src/sha1sum.c: New.
	* src/Makefile.am (EXTRA_DIST): Add sha1sum.c and buld
	sha1sum.exe, md5sum.exe and sha256sum.exe.
	(sha1sum.exe, md5sum.exe, sha256sum.exe): New.
	* src/inst-gpg4win.nsi: Install them.
	* src/uninst-gpg4win.nsi: Uninstall them.

	* patches/gpgme-1.2.0/05-is-socket.patch: New.

2010-04-12  Werner Koch  <wk@g10code.com>

	Note: Version 2.0.2 has been released from another SVN branch.

2010-04-12  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	* NEWS: Change compendium-de version

2010-04-09  Marcus Brinkmann  <marcus@g10code.de>

	* src/inst-pinentry.nsi: Install pinentry-gtk-2 as default if qt
	is not available (should fix issue1315).

2010-04-01  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	* configure.ac: Change compendium-de date.

2010-03-18  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	* packages/packages.current: Update kleopatra

2010-03-17  Werner Koch  <wk@g10code.com>

	* patches/gnupg2-2.0.14/02-scd-no-service.patch: New.

2010-03-16  Emanuel Schuetze  <emanuel.schuetze@intevation.de>
