@@ -213,7 +213,8 @@ stamps/stamp-$(1)-04-install: stamps/stamp-$(1)-03-make
 	($(call SETVARS,$(1));				\
 	  cd "$$$${pkgsdir}";				\
 	  $(MAKE) $(AM_MAKEFLAGS) $$$${pkgmkargs_inst} install; \
-	  $(call STRIP_macro,"$$$${pkgidir}"))
+	  $(call STRIP_macro,"$$$${pkgidir}"); \
+	  $(call gpg4win_pkg_$(call FROB_macro,$(1))_post_install))
 	touch stamps/stamp-$(1)-04-install
 
 stamps/stamp-$(1)-05-stow: stamps/stamp-$(1)-04-install
@@ -231,7 +232,7 @@ clean-$(1):
 	 (cd $(ipdir) &&				\
 	  ($(STOW) -D "$$$${pkg_version}";		\
 	   rm -fR "$$$${pkg_version}"));		\
-	 rm -fR "$$$${pkgsdir}"
+	 rm -fR "$$$${pkgsdir}")
 	rm -f stamps/stamp-final-$(1) stamps/stamp-$(1)-*
 
 endef
