@@ -1,3 +1,15 @@
+2010-05-04  Marcus Brinkmann  <marcus@g10code.de>
+
+	* packages/packages.current: Update zlib to 1.2.5, now directly as
+	source package from zlib.net.
+	* configure.ac: Make zlib a source package.
+	* src/Makefile.am (gpg4win_mpkgs): Add zlib.
+	(gpg4win_bpkgs): Remove zlib.
+	(gpg4win_pkg_zlib_post_install): Bump version and fix install path.
+	(gpg4win_pkg_zlib_make_args, gpg4win_pkg_zlib_make_args_inst): New.
+	* src/gpg4win.mk.in (MPKG_template_): Run post install hook and
+	fix clean target.
+
 2010-05-04  Colin Leroy  <colin@colino.net
 
 	* packages/packages.current: Update Claws-Mail and plugins
